--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -14,6 +15,8 @@ header{
     padding: 20px;
     justify-content: space-between;
     align-items: center;
+    background-size: cover;
+    
 }
 #hero{
     display: flex;
@@ -154,11 +157,14 @@ header h1{
 nav{
     display: flex;
     align-items: center;
+    flex-direction: row;
 }
 ul{
     list-style: none;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+
 }
 li{
     margin: 0px 25px;
@@ -173,4 +179,25 @@ footer{
     color: white;
     background-color: black;
     text-align: end;
+}
+@media (max-width: 768px){
+    .sectionProductos{
+        flex-direction: column;
+        align-items: center;
+    }
+    .sectionNosotros{
+        flex-direction: column;
+    }
+    .imgNosotros{
+        width: 50%;
+    }
+    .sectionNosotros p{
+        font-size: 1.2rem;
+        font-weight: 500;
+        margin: 30px;
+        padding: 50px;
+        width: 60%;
+        height: 35%;
+    
+    }
 }
